events page banner and menu overlaping issue fixed

--- a/docroot/sites/all/themes/ambitious/sass/issue-fixing.scss
+++ b/docroot/sites/all/themes/ambitious/sass/issue-fixing.scss
@@ -357,3 +357,7 @@
   }
 }
 
+.header_banner{
+  z-index: 0;
+}
+
